# SpiceSimWarper

./: .gitignore  .pre-commit-config.yaml  BakeFile  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  python-package.yml  python-test.yml
example/: ngspice_run.py
pywas/: bake.py  main.py  template.py
pywas/cookiecutter_template/module_verilog/: cookiecutter.json
pywas/cookiecutter_template/module_verilog/hooks/: post_gen_project.py
pywas/cookiecutter_template/module_verilog/{{cookiecutter.project_slug}}/: Makefile  test_{{cookiecutter.project_slug}}.py  {{cookiecutter.project_slug}}.md  {{cookiecutter.project_slug}}.v
pywas/cookiecutter_template/openlane_project/: cookiecutter.json
pywas/flow/: openlane.yaml
pywas/parse/: results.py  spice3raw.py
pywas/template/: _tb.v  template_tb.v
pywas/wrapper/: base_wrapper.py  ngspice.py  template.py
pywes/: main.py
pywes/wrapper/: base_wrapper.py  ngspice.py
scripts/: note.md
test/: test_create.py  test_npspice.py  test_template.py
