[tool.poetry]
name = "pywas"
version = "0.1.6"
description = ""
authors = ["Patarimi <mpqqch@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pywas = "pywas.main:cli"

[tool.poe.tasks]
doc         = "typer pywas.main utils docs --name pyWAS --output README.md"
show-update = "poetry show -l -o"
publish     = "poetry publish --build --username __token__ --password $PYPI_TOKEN"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
typer = "^0.9.0"
h5py = "^3.7.0"
numpy = "^1.26.0"
jinja2 = "^3.1.2"
wget = "^3.2"
pyyaml = "^6.0"
rich = "^13.3.3"
pydantic = "^2.0.0"
cookiecutter = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.1.0"
pre-commit = "^3.1.1"
tox = "^4.0.0"
typer-cli = {git = "https://github.com/Patarimi/typer-cli.git"}
poethepoet = ">=0.22"
pytest-sugar = "^0.9.7"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
